fix notification display fix item size jumps

--- a/styles/blocks/trash/_interface.scss
+++ b/styles/blocks/trash/_interface.scss
@@ -47,8 +47,8 @@
     grid-area: game;
     display: flex;
     justify-content: center;
-    min-width: 200px;
-    min-height: 200px;
+    width: 200px;
+    height: 200px;
   }
 
   &__circle {
@@ -62,6 +62,11 @@
     position: absolute;
     left: 0;
     top: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__game-container {
     width: 100%;
     height: 100%;
   }
@@ -96,19 +101,16 @@
     border: 0;
     background-color: transparent;
     cursor: pointer;
+
+    @include mixins.media(400px) {
+      align-self: center;
+    }
   }
   
   &__boxes {
-    --box-size: 60px;
-
     display: grid;
     grid-template-columns: repeat(4, minmax(60px, 100px));
     gap: 20px;
-
-    
-    // @include mixins.media(450px) {
-    //   --box-size: 100px;
-    // }
 
     &.is-disabled {
       pointer-events: none;
